objects/Batch__c.object
<CustomObject>
    <fields>
        <fullName>Batch_time__c</fullName>
        <label>Batch time</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Count__c</fullName>
        <formula>TODAY() -  Start_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check dates</inlineHelpText>
        <label>Date Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staff_Name__c</fullName>
        <label>Staff Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ravi</fullName>
                </value>
                <value>
                    <fullName>john</fullName>
                </value>
                <value>
                    <fullName>Mohan</fullName>
                </value>
                <value>
                    <fullName>gopi</fullName>
                </value>
                <value>
                    <fullName>guna</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business</label>
        <referenceTo>Business__c</referenceTo>
        <relationshipLabel>Batches</relationshipLabel>
        <relationshipName>Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_time__c</columns>
        <columns>Staff_Name__c</columns>
        <columns>Start_date__c</columns>
        <columns>business__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>